# TheChroniclesOfAndaria

./: .gitignore  BoardGame.geany  CMakeLists.txt  Doxyfile  Main.scala  NOTES  README  README.md  potrzeby.txt  przeciwnicy.txt  runTool.sh
src/: CMakeLists.txt  cyklgry.cpp  cyklgry.h  ekwipunek.cpp  ekwipunek.h  gra.h  gracz.cpp  gracz.h  hex.cpp  hex.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mistrzgry.cpp  mistrzgry.h  mojpasek.cpp  mojpasek.h  mojprzycisk.cpp  mojprzycisk.h  mybutton.cpp  mybutton.h  nagroda.cpp  nagroda.h  newgamedialog.cpp  newgamedialog.h  obszarplanszy.cpp  obszarplanszy.h  oknobazaru.cpp  oknobazaru.h  oknoekwipunek.cpp  oknoekwipunek.h  oknogracza.cpp  oknogracza.h  oknonagrody.cpp  oknonagrody.h  oknonowejgry.cpp  oknotawerny.cpp  oknotawerny.h  oknozadania.cpp  (+37 more)
src/Core/: Board.cpp  Board.h  CMakeLists.txt  DataKeeper.cpp  DataKeeper.h  DataManager.cpp  DataManager.h  DataManager.hpp  Enums.cpp  Enums.hpp  EnumsDeclarations.hpp  Game.h  GameCycle.cpp  GameCycle.h  GameMaster.cpp  GameMaster.h  Mod.cpp  Mod.h  Mod.hpp  Paths.cpp  Paths.h  Paths.hpp  Resources.hpp  Strings.h  Strings.hpp  main.cpp
src/Core/AI/: AI.cpp  AI.h
src/Core/Actions/: Action.h
src/Core/Containers/: Board.cpp  Board.h  Board.hpp  Coordinates.cpp  Coordinates.hpp  Date.h  Date.hpp  Effect.cpp  Effect.h  Effect.hpp  Enemy.cpp  Enemy.h  Enemy.hpp  Entity.cpp  Entity.h  Entity.hpp  EnumHelpers.hpp  Equipment.cpp  Equipment.h  Equipment.hpp  Field.cpp  Field.h  FightParticipant.cpp  FightParticipant.h  Item.cpp  Item.h  Item.hpp  ItemModel.cpp  ItemModel.h  ItemProxyModel.h  ItemWearable.cpp  ItemWearable.h  ItemWearableModel.cpp  ItemWearableModel.h  Journal.cpp  Journal.h  Journal.hpp  Player.cpp  Player.h  Player.hpp  (+19 more)
src/Core/Operations/: EquipmentManagement.cpp  EquipmentManagement.h  QuestManagement.cpp  QuestManagement.h
src/Core/Parsers/: BoardParser.cpp  BoardParser.h  BoardParser.hpp  EnemyParser.cpp  EnemyParser.h  EnemyParser.hpp  ItemParser.cpp  ItemParser.h  ItemParser.hpp  PrizeParser.cpp  PrizeParser.h  PrizeParser.hpp  QuestParser.cpp  QuestParser.h  QuestParser.hpp
src/Core/Util/: BiHash.cpp  BiHash.hpp  Serial.hpp
src/Core/Utils/: BiHash.cpp  BiHash.hpp  Debug.hpp  EnumHelpers.hpp  Serial.hpp
src/Core/Widgets/: Map.cpp  Map.hpp  MapView.cpp  MapView.hpp  Tile.cpp  Tile.hpp
src/Editor/: CMakeLists.txt  ContentEditor.cpp  ContentEditor.h  MainWindow.cpp  MainWindow.h  MainWindow.hpp  Shortcuts.h  Strings.h  Strings.hpp  main.cpp
src/Editor/CustomWidgets/: EffectEdit.cpp  EffectEdit.hpp  EffectsEdit.cpp  EffectsEdit.hpp  EffectsListEdit.cpp  EffectsListEdit.h  EffectsListEdit.hpp  EnumEdit.cpp  EnumEdit.h  EnumEdit.hpp  ListEdit.cpp  ListEdit.hpp  ObjectiveEdit.cpp  ObjectiveEdit.hpp  ObjectivesEdit.cpp  ObjectivesEdit.hpp  PrizeEdit.cpp  PrizeEdit.hpp
src/Editor/Editors/: BoardEditor.cpp  BoardEditor.hpp  ContentEditor.cpp  ContentEditor.h  EnemiesEditor.cpp  EnemiesEditor.h  EnemiesEditor.hpp  ItemsEditor.cpp  ItemsEditor.h  ItemsEditor.hpp  QuestEditor.cpp  QuestEditor.h  QuestEditor.hpp
src/GRAFIKA/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  obszarplanszy.cpp  obszarplanszy.h  oknogracza.cpp  panelakcji.cpp  panelakcji.h
src/GRAFIKA/elementy/: hex.cpp  hex.h  pionek.cpp  pionek.h
src/GRAFIKA/moje_widzety/: mojpasek.cpp  mojprzycisk.h
src/GRAFIKA/okna/: oknobazaru.cpp  oknobazaru.h  oknoekwipunek.cpp  oknonagrody.cpp  oknonagrody.h  oknonowejgry.h  oknotawerny.cpp  oknotawerny.h  oknouzdrowiciela.cpp  oknouzdrowiciela.h  oknozadania.cpp  oknozadania.h  oknozasad.cpp  oknozasad.h  walka.h
src/Game/: ActionPanel.cpp  ActionPanel.h  Board.cpp  Board.h  BoardArea.cpp  BoardArea.h  CMakeLists.txt  GameMaster.cpp  GameMaster.h  MainWindow.cpp  MainWindow.h  PlayerWindow.cpp  PlayerWindow.h  main.cpp
src/Game/Client/: AuthorityClt.h  CMakeLists.txt  ConnectionAdapterClt.cpp  ConnectionAdapterClt.h  ConnectionAdapterClt.hpp  GameCycleClt.cpp  GameCycleClt.h  GameCycleClt.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  NewGameClt.cpp  NewGameClt.h  NewGameClt.hpp  NewGameGui.cpp  NewGameGui.h  NewGameGui.hpp  Strings.h  Strings.hpp  main.cpp
src/Game/Common/: Authority.cpp  Authority.h  Board.cpp  Board.h  CMakeLists.txt  ConnectionAdapter.cpp  ConnectionAdapter.h  ConnectionAdapter.hpp  DataKeeper.cpp  DataKeeper.h  GameMaster.cpp  GameMaster.h  Message.cpp  Message.h  Message.hpp
src/Game/CustomWidgets/: MyTaskbar.cpp
src/Game/Elements/: PlayerMarker.cpp  Tile.cpp  Tile.h
src/Game/FixedComponents/: ActionPanel.cpp  ActionPanel.h  BoardArea.cpp  BoardArea.h  PlayerWindow.cpp  PlayerWindow.h
src/Game/Handlers/: HandlerTemplate.cpp  HandlerTemplate.h  HealerHandler.h  TavernHandler.h
src/Game/Server/: AuthoritySrv.h  CMakeLists.txt  ConnectionAdapterSrv.cpp  ConnectionAdapterSrv.h  ConnectionAdapterSrv.hpp  GameCycle.cpp  GameCycle.h  GameCycleSrv.cpp  GameCycleSrv.h  GameCycleSrv.hpp  NewGameSrv.cpp  NewGameSrv.h  NewGameSrv.hpp  Strings.h  Strings.hpp  main.cpp
src/Game/Windows/: EquipmentWindow.cpp  EquipmentWindow.h  FightWindow.cpp  FightWindow.h  HealerWindow.cpp  HealerWindow.h  MarketViewWindow.cpp  MarketViewWindow.h  MarketWindow.cpp  MarketWindow.h  NewGameWindow.cpp  NewGameWindow.h  PrizeWindow.cpp  PrizeWindow.h  QuestWindow.h  RulesWindow.cpp  TavernWindow.h
src/Gui/: ActionPanel.cpp  ActionPanel.h  BoardArea.cpp  BoardArea.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  PlayerWindow.cpp  PlayerWindow.h
src/Gui/CustomWidgets/: MyButton.cpp  MyButton.h  MyTaskbar.cpp  MyTaskbar.h
src/Gui/Elements/: PlayerMarker.cpp  PlayerMarker.h  Tile.cpp  Tile.h
src/Gui/Windows/: EquipmentWindow.cpp  EquipmentWindow.h  FightWindow.cpp  (+17 more)
src/LOGIKA/: CMakeLists.txt  cyklgry.cpp  cyklgry.h  gra.h  main.cpp  mistrzgry.cpp  mistrzgry.h  plansza.cpp  plansza.h
src/Old/: Authority.cpp  Authority.hpp  AuthorityClt.hpp  AuthoritySrv.hpp  Board.cpp  Board.hpp  GameMaster.cpp  GameMaster.hpp
src/dane/: nagrody.txt  plansza.txt  przeciwnicy.txt  przedmioty.txt  zadania.txt
src/przeciwnicy/: SP.sh
(+130 files in other folders)
